# StackWise

./: .env  DEMO_GUIDE.md  README.md  ROADMAP.md  VISION.md  WORKSPACE_EXPLANATION.md  example_mcp_server.py  pyproject.toml  test_couponapi_csv.py  test_couponapi_incremental.py  test_endpoints.py
.github/: copilot-instructions.md
src/smart_budget_mcp/: __init__.py  main.py  main_debug.py  savings_engine.py  schemas.py  state.py
